# docs/swagger/swagger.yaml
@@ -809,7 +809,7 @@ definitions:
     x-enum-varnames:
     - UserRoleUser
     - UserRoleAdmin
-host: localhost:8080
+host: 5p9ubi66hh.execute-api.ap-south-1.amazonaws.com
 info:
   contact:
     email: support@nashikdarshan.com
@@ -931,6 +931,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Create a new category
       tags:
       - Category
@@ -960,6 +961,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Delete a category
       tags:
       - Category
@@ -1032,6 +1034,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Update a category
       tags:
       - Category
@@ -1116,6 +1119,7 @@ paths:
               type: string
             type: object
       security:
+      - Authorization: []
       - ApiKeyAuth: []
       summary: Authenticated health check
       tags:
@@ -1246,6 +1250,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Create a new place
       tags:
       - Place
@@ -1275,6 +1280,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Delete a place
       tags:
       - Place
@@ -1347,6 +1353,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Update a place
       tags:
       - Place
@@ -1386,6 +1393,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Assign categories to a place
       tags:
       - Place
@@ -1457,6 +1465,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Add image to place
       tags:
       - Place
@@ -1517,6 +1526,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Delete place image
       tags:
       - Place
@@ -1557,6 +1567,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Update place image
       tags:
       - Place
@@ -1581,6 +1592,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Refresh place scores
       tags:
       - Place
@@ -1693,6 +1705,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Create a new review
       tags:
       - Reviews
@@ -1722,6 +1735,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Delete a review
       tags:
       - Reviews
@@ -1790,6 +1804,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Update a review
       tags:
       - Reviews
@@ -1853,6 +1868,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: List API keys
       tags:
       - Secrets
@@ -1889,6 +1905,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Create a new API key
       tags:
       - Secrets
@@ -1918,6 +1935,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Delete API key
       tags:
       - Secrets
@@ -1948,6 +1966,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Get API key by ID
       tags:
       - Secrets
@@ -1988,6 +2007,7 @@ paths:
             $ref: '#/definitions/ierr.ErrorResponse'
       security:
       - Authorization: []
+      - ApiKeyAuth: []
       summary: Update API key
       tags:
       - Secrets
@@ -2044,9 +2064,17 @@ paths:
       summary: Get current user
       tags:
       - User
+schemes:
+- https
 securityDefinitions:
+  ApiKeyAuth:
+    description: API key for server-to-server or script access. Use X-API-Key header
+      (alternative to Bearer).
+    in: header
+    name: X-API-Key
+    type: apiKey
   Authorization:
-    description: Enter the token with the `Bearer ` prefix, e.g. `Bearer <token>`.
+    description: JWT Bearer token, e.g. `Bearer <token>`.
     in: header
     name: Authorization
     type: apiKey
